# AP_Exercises_Mehmedali

Unit_2/: README.md  task_3.3.py
Unit_2/01_prompt_examples/: 02_prompt_engineering_example.md  (+3 more)
Unit_2/03_timer_app_case_study/: README.md  architecture.md  architecture_diagram.mmd  pyproject.toml  requirements.md
Unit_2/03_timer_app_case_study/agents/: 04_code_review_agent.md  06_test_agent.md
Unit_2/03_timer_app_case_study/data/: timer_app.json
Unit_2/03_timer_app_case_study/src/data/: timer_app.json
Unit_2/03_timer_app_case_study/src/timer_app/: __init__.py  __main__.py
Unit_2/03_timer_app_case_study/src/timer_app.egg-info/: PKG-INFO  SOURCES.txt
Unit_2/03_timer_app_case_study/src/timer_app/application/: scheduler.py  services.py  timers.py
Unit_2/03_timer_app_case_study/src/timer_app/domain/: errors.py  models.py  recurrence.py  time_rules.py
Unit_2/03_timer_app_case_study/src/timer_app/infrastructure/: console_notifications.py  json_store.py  system_clocks.py
Unit_2/03_timer_app_case_study/src/timer_app/ports/: clocks.py  notifications.py  repositories.py
Unit_2/03_timer_app_case_study/src/timer_app/ui/: cli.py
Unit_2/03_timer_app_case_study/tests/: test_cli_parsing.py  test_json_store_and_scheduler.py  test_time_rules_and_services.py  test_timers.py
Unit_3/: Recap_OOP1.py  Selber erstellt class.py
Unit_4/: payment_task.md
copilot_tests/: agent_workflow.docx  exercise_1_1.py  exercise_1_3.py  exercise_1_4.py  exercise_3a.py  exercise_3a_review_agent1.md  exercise_3a_review_agent2.md  myexample_IS_NES.py  review_exercise_3a_QA.md
(+15 files in other folders)
